--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,5 +18,9 @@
 }
 
 .module_btn{
-    @apply bg-redBtn shadow-lg px-3 py-2 text-white rounded-lg;
+    @apply bg-redBtn shadow-lg px-3 py-2 text-white rounded-lg hover:bg-red-500;
+}
+
+.btn_submit{
+    @apply bg-green-500 shadow-lg px-3 py-2 text-white rounded-lg hover:bg-green-400;
 }
